# Managing-Multi-Agent-Teams

./: .gitignore  README.md  SETUP.md  pytest.ini  requirements.txt  resource_library.md
00_welcome/: README.md  course_overview.md  setup_guide.md
assignments/: advanced_implementation_governance.md  assignment12_from_whisper_to_shipped_code.md  assignment_syllabus.md  basic_agent_governance_labs.md  ex2_1_type_safe_handoffs.md  ex2_3_mcp_tool_governance.md  ex2_tom_memory.md  ex4_1_capstone_month_plan.md  ex4_trust_governance_matrix.md  ex5_capstone_virtual_software_company.md  foundational_architecture_design.md  index.md  module10_hr_governance.md  module11_marketing_orchestration.md  module12_advanced_orchestration.md  module14_crewai_orchestration_patterns.md  module7_individual_agent_skills.md  module8_production_ready_agent_features.md  module9_deployment_operations.md  multi_agent_systems_foundations.md
crewai_learning/: README.md  SETUP_AND_LEARNING_EXPERIENCE.md
crewai_learning/academic_research_crewai_project/: README.md  pyproject.toml
crewai_learning/academic_research_crewai_project/src/academic_research_writer_evaluator/: crew.py  main.py
crewai_learning/academic_research_crewai_project/src/academic_research_writer_evaluator/config/: agents.yaml  tasks.yaml
crewai_learning/academic_research_crewai_project/src/academic_research_writer_evaluator/tools/: semantic_scholar_search_tool.py
guides/: technical_implementation_guide.md
instructor/: a2a_identity_tool_matrix.md  build_grading_rubrics.mjs  course_delivery_readiness_checklist.md  (+8 more)
(+68 files in other folders)
