[project]
name = "academic_research_writer_evaluator"
version = "0.1.0"
description = "academic_research_writer_evaluator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.15.0",
    "exa-py",
    "pydantic",
]

[project.scripts]
academic_research_writer_evaluator = "academic_research_writer_evaluator.main:run"
run_crew = "academic_research_writer_evaluator.main:run"
train = "academic_research_writer_evaluator.main:train"
replay = "academic_research_writer_evaluator.main:replay"
test = "academic_research_writer_evaluator.main:test"
run_with_trigger = "academic_research_writer_evaluator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
